Bug 400066  Setting role on table leads to nodes being <dead> in accerciser, r=ginn.chen, a=dsicore